--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/catalog.css">
-    <title>Online Store</title>
+    <title>About</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
@@ -17,14 +17,14 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Catalog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">Admin</a>
+                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Catalog<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/admin">Admin</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/about">About<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
           <div class="form-inline my-2 my-lg-0">
@@ -33,15 +33,8 @@
           </div>
         </div>
     </nav>
-
-    <div id="container" class="container">
-      <h1 class="tc">Products Catalog</h1>
-        <div class="col">
-            <div id="catalog" class="catalog-container">
-                <!-- display products -->
-
-            </div>
-        </div>
+    <div class="container">
+        <h1 class="tc">OBrien McQuade</h1>
     </div>
     <script src="script/catalog.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
