--- a/public/admin.html
+++ b/public/admin.html
@@ -22,6 +22,9 @@
                 <li class="nav-item active">
                 <a class="nav-link" href="/admin">Admin<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
             </ul>
             <div class="form-inline my-2 my-lg-0">
                 <input id="txt-search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
