--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/catalog.css">
-    <title>About</title>
+    <title>Contact</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Catalog</a>
+                  <a class="nav-link" href="/">Catalog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin">Admin</a>
+                  <a class="nav-link" href="/admin">Admin</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about">About<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact">Contact<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
           <div class="form-inline my-2 my-lg-0">
@@ -36,10 +36,29 @@
           </div>
         </div>
     </nav>
-    <div class="container">
-        <h1 class="tc">OBrien McQuade</h1>
+
+    <div id="container" class="container">
+      <h1 class="tc">Contact Us</h1>
+      <div class="formContainer">
+            <form id="contactForm">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="nameInput">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" class="form-control" id="emailInput">
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea class="form-control" id="messageInput" rows="3"></textarea>
+                </div>
+            </form>
+            <button class="btn btn-outline-info" type="submit">Send</button>
+        </div><!--End form Container-->
     </div>
-    <script src="script/catalog.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
