--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/contact">Contact</a>
+                </li>
             </ul>
           <div class="form-inline my-2 my-lg-0">
             <input id="txt-search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
