--- a/public/contact.html
+++ b/public/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/catalog.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Contact</title>
 </head>
 <body>
@@ -38,24 +38,20 @@
     </nav>
 
     <div id="container" class="container">
-      <h1 class="tc">Contact Us</h1>
       <div class="formContainer">
             <form id="contactForm">
+                <h1 class="formH1" >Contact Us</h1>
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" class="form-control" id="nameInput">
+                    <input type="text" class="form-control" id="nameInput" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email address:</label>
-                    <input type="email" class="form-control" id="emailInput">
+                    <input type="email" class="form-control" id="emailInput" placeholder=" Email address">
                 </div>
-
                 <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea class="form-control" id="messageInput" rows="3"></textarea>
+                    <textarea class="form-control" id="messageInput" rows="3" placeholder="Message"></textarea>
                 </div>
             </form>
-            <button class="btn btn-outline-info" type="submit">Send</button>
+            <button class="btn btn-block btn-outline-info" type="submit">Send</button>
         </div><!--End form Container-->
     </div>
     
